# sis

./: .gitignore  DE-deploy.sh  check_env.sh  clean.sh  debug.sh  deploy.sh  install.sh  install_VB.sh  log.py  package_install.sh  readme.md  saigai.py  setup.sh  tree.py  try-deploy.sh  どうやって作ったか.md
live/: provision-ap.sh
mdm_server/: API.md  README.md  requirements.txt  server.py
mdm_server/clients/: demo.py  server_admin_client.py  teacher_client.py
provisioning/: sis.conf
provisioning/apt/: 20auto-upgrades  99sis-proxy.conf
provisioning/audit/: 99-sis.rules
provisioning/autostart/: sis-keys.desktop
provisioning/nm-dispatcher/: 90-sis-log
provisioning/polkit/: 90-sis-teacher.pkla
provisioning/systemd/: sis-agent-update.service  sis-agent-update.timer  sis-exam-mode.service  sis-mdm-agent.service  sis-mdm-agent.timer  sis-mdm-poll.service  sis-mdm-poll.timer  (+12 more)
scripts/: apply-certs.sh  apply-printers.sh  apply-proxy.sh  apply-restrictions.sh  apply-wifi.sh  collect-web-history.sh  create-accounts.sh  distribute-collect.sh  enforce-screentime.sh  exam-mode.sh  factory-reset.sh  install-keybindings.sh  inventory.sh  mdm-agent.sh  pre-update-snapshot.sh  profiled.sh  remote-support.sh  remote-wipe.sh  scrape-images.sh  screen-record.sh  setup-dns-filter.sh  setup-fscrypt.sh  setup-sso.sh  veyon-setup.sh  zerotouch-wizard.sh
sis-ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
sis-ui/src-tauri/: Cargo.toml  tauri.conf.json
sis-ui/src-tauri/src/: main.rs
tools/: make-iso.sh  vm-helper.sh
(+41 files in other folders)
