[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
sysinfo = "0.36.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
notify = "6"
mime_guess = "2"
tauri-plugin-global-shortcut = "2"
cfg-if = "1"
dirs = "5"
base64 = "0.22"

[features]
default = []
# Raylibベースのフルオーバーレイ（Linux推奨）。有効化にはraylib開発環境が必要。
overlay_raylib = ["raylib"]

[dependencies.raylib]
version = "5.0"
optional = true
